<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gram Power Survey</string>
    <string name="new_site">Enter the name of the site:</string>
    <string name="new_site_option">Create New Site</string>
    <string name="upload_map_option">Upload Map</string>
    <string name="house_latitude">Latitude</string>
    <string name="household_survey">Household Survery</string>
    <string name="date">Enter Date</string>
    <string name="surveyor_name">Name of the Surveyor*</string>
    <string name="consumer_name">Name of the Consumer*</string>
    <string name="consumer_fathers_name">Fathers Name</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="family">Total number of family members</string>
    <string name="children">Number of children in the house</string>
    <string name="adults">Number of adults in the house</string>
    <string name="occupation">Enter the Occupation</string>
    <string name="agriculture">Agriculture</string>
    <string name="business">Business</string>
    <string name="survey_question_2">2)Can you afford Rs 2000 en dash 3000 for a power connection?</string>
    <string name="affordable">Yes</string>
    <string name="not_affordable">No</string>
    <string name="financial_feasibility">Can You Afford?</string>
    <string name="survey_question_3">3)For how many hours you will be using following electrical equipment in a day?</string>
    <string name="light">CFL Light</string>
    <string name="hrs">Hours</string>
    <string name="fan">Fan</string>
    <string name="television">Television</string>
    <string name="other_devices">Other</string>
    <string name="survey_question_4">4)How many mobile phones do you have in your house?</string>
    <string name="survey_question_4_1">How much do you recharge?</string>
    <string name="survey_question_4_2">How many times do you recharge in a month?</string>
    <string name="survey_question_5">5)How many litres of kerosene do you use in a month?</string>
    <string name="survey_question_5_1">Cost of kerosene/litre in subsidy</string>
    <string name="survey_question_5_2">Cost of kerosene/litre in black</string>
    <string name="survey_question_6">6)Rent for meter per day is 50paise</string>
    <string name="connection_type">7)Connection Type</string>
    <string name="prepaid">Prepaid</string>
    <string name="minimum_plan">Minimum Monthly Plan</string>
    <string name="save_survey">Save Survey</string>
    <string name="new_house">Place House Here</string>
    <string name="new_pole">Place Pole Here</string>
    <string name="new_central_room">Place Central Room Here</string>
    <string name="create_map">Create Map</string>
    <string name="community_village_name">1 a)गांव का नाम  </string>
    <string name="community_no_of_houses">b)घरों की संख्या</string>
    <string name="community_population">c)गांव की आबादी</string>
    <string name="community_block">d)खंड </string>
    <string name="community_district">e)ज़िला</string>
    <string name="community_nearby_powered_place">3.गांव से कितनी दूरी पर बिजली आती है?</string>
    <string name="community_plant">4.प्लाटं की स्थापना के लिए जगह?</string>
    <string name="community_plant_size">5.हमे कितना जमीन या छत मिल सकता है?</string>
    <string name="community_availability_of_room">6.हमे 100 से 200 वर्ग फुट का एक कमरा मिल सकता है?</string>
    <string name="community_room_rent">7.कमरे के लिए कितना किराया?</string>
    <string name="community_celltower">8.कौन सी कम्पनी का टेलीकौम टॉवर गांव के नजदीक है?</string>
    <string name="community_celltower_distance">9.गाँव से कितनी दूरी पर है ?</string>
    <string name="community_plant_details">10.प्लाटं लगने वाली जगह का फोटो ओर लंबाई और चौड़ाई कितनी है ?</string>
    <string name="community_stock_details">11.गांव मे बजरी, रोङी, ईट, सिमेन्ट, व सिमेन्ट के पोलो का भाव क्या है ?</string>
    <string name="title_activity_new_site_acitivity">NewSiteAcitivity</string>
    <string name="meter">मीटर</string>
    <string name="distance">Please Enter Accurate Distance.</string>
    <string name="continue_survey">Continue the Survey</string>
    <string name="view_site">View the Site</string>

    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="time">Time:</string>
    <string name="house_data">View Houses</string>
    <string name="pole_data">View Poles</string>
    <string name="centralroom_data">View Centralroom</string>
    <string name="mobileNumber">Mobile Number:</string>
    <string name="fatherName">Father\'s Name:</string>
    <string name="consumerName">Consumer Name:</string>
    <string name="preWill">Prepaid Willingness</string>
    <string name="villageId">Site ID</string>
    <string name="siteName">Site Name</string>
    <string name="feeder_id">Feeder ID</string>
    <string name="new_feeder">New Feeder</string>

</resources>