<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textAccuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textAltitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:layout_marginBottom="3dip"
            android:layout_marginTop="3dip"/>

        <EditText
            android:id="@+id/surveyor_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surveyor_name"
            android:editable="false"
            android:enabled="false"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editConsumerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Consumer ID"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editConsumerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumer_name"/>

        <EditText
            android:id="@+id/editFatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="Name of Consmer&apos;s Father"/>

        <EditText
            android:id="@+id/editMobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/editLastPayment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Last Payment"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editMonthlyBill"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Monthly Bill"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editHoursAvail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Hours of Availability"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editVoltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Voltage"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Load"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/preWilltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rural/Urban"
            android:textAlignment="center"
            android:textSize="9pt"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/usageCategory"/>

        <TextView
            android:id="@+id/preWill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preWill"
            android:textSize="10pt"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/prepaidWillingness"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/preWill"/>

        <TextView
            android:id="@+id/textProblemFace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Problems Faced"
            android:textSize="10pt"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linProb">
        </LinearLayout>

        <TextView
            android:id="@+id/textTheftInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Theft Information"
            android:textSize="10pt"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linTheft">

        </LinearLayout>

        <TextView
            android:id="@+id/textNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notes"
            android:textSize="10pt"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editNotes"
            android:layout_gravity="center_horizontal"
            android:lines="4"/>

        <Button
            android:id="@+id/survey_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_survey"/>

    </LinearLayout>

</ScrollView>